# miso-camera

./: README.md  app.cabal  cabal.project
app/: Main.hs
static/: index.html
